--- a/Diwali_Sales_Analysis.ipynb
+++ b/Diwali_Sales_Analysis.ipynb
@@ -1548,9 +1548,9 @@
    "id": "1e91055b",
    "metadata": {},
    "source": [
-    "complete project on YouTube: https://www.youtube.com/@RishabhMishraOfficial\n",
+    "Connect me on Linkedin https://www.linkedin.com/in/piyush-mishra-43966a20b/",
     "    \n",
-    "complete project on GitHub: https://github.com/rishabhnmishra/Python_Diwali_Sales_Analysis"
+    "complete project on https://github.com/piyush9625/Diwali_Sales_Analysis-using-Numpy-and-Pandas"
    ]
   },
   {
